<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:padding="12dp"
    android:fillViewport="true"
    tools:context="com.example.androidl.quizeapp.Question2Activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q2_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q2"
                style="@style/mediumText"/>

            <ImageView
                android:id="@+id/q2_animal"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/lion"
                android:contentDescription="@string/animal_image"
                android:layout_below="@id/q2_txt"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/q2_animal">
                <TableRow android:layout_marginBottom="3dp">
                    <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkboxQ1"
                        style="@style/checkBoxStyle"
                        android:layout_gravity="center_vertical"/>
                    <ImageView
                        android:id="@+id/checkbox1_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/right_answer"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:visibility="invisible"/>
                </TableRow>

                <TableRow android:layout_marginBottom="3dp">
                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkboxQ2"
                        style="@style/checkBoxStyle"
                        android:layout_gravity="center_vertical"/>
                    <ImageView
                        android:id="@+id/checkbox2_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/wrong_answer"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:visibility="invisible"/>
                </TableRow>

                <TableRow android:layout_marginBottom="3dp">
                    <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkboxQ3"
                        style="@style/checkBoxStyle"
                        android:layout_gravity="center_vertical"/>
                    <ImageView
                        android:id="@+id/checkbox3_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/right_answer"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:visibility="invisible"/>
                </TableRow>

                <TableRow android:layout_marginBottom="3dp">
                    <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkboxQ4"
                        style="@style/checkBoxStyle"
                        android:layout_gravity="center_vertical"/>
                    <ImageView
                        android:id="@+id/checkbox4_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/wrong_answer"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:visibility="invisible"
                        />
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/next_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/next"
                android:layout_gravity="end"
                android:onClick="nextAnimal"
                android:layout_margin="5dp"
                android:visibility="invisible"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:id="@+id/check_textview"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:text="@string/check"
                style="@style/mediumText"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circular_bg2"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp"
                android:onClick="checkQuestion2"/>
        </RelativeLayout>
</ScrollView>
